fix(Grid Component): remove white space at the bottom of the Grid component.

--- a/app/components/grid/styles.css
+++ b/app/components/grid/styles.css
@@ -1,6 +1,6 @@
 .grid {
   width: 100%;
-  height: 100%;
+  height: auto;
 }
 
 .grid_title {
